# gluttonizer

./: .gitignore  Cargo.toml
data/: restaurants.json
src/: controller.rs  data_provider.rs  entity.rs  error.rs  lib.rs  main.rs  picker.rs  repository.rs  service.rs  template.rs
templates/: gluttonize.html  home.html  layout.html  restaurants.html  results.html
